--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
+    "joi-password": "^4.1.1",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.30.0",
     "sqlite3": "^5.1.6"
   }
