--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
+    "joi-password": "^4.1.1",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-transport": "^2.7.4",
